mobile content and styling is complete except for font

--- a/index.html
+++ b/index.html
@@ -18,15 +18,71 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+  integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
 
   <!-- Add your site or application content here -->
-  <h1>Welcome to Luna and Lady Landscaping!</h1>
-  <h3>New site coming soon!</h3>
+ <div class="content-wrapper">
+
+  <header>
+    <nav>
+      <a href=#contact>Contact</a>
+      <a href=#services>Services</a>
+    </nav>
+    <div class="header-contact">
+      <a href="tel:7178133286"><p>(717)813-3286</p></a>
+      <a href="mailto:LunaAndLadyLandscaping@gmail.com">
+       <p>LunaAndLadyLandscaping@gmail.com</p></a>
+      <a><p>Mohnton, Pa</p></a>
+    </div>
+  </header>
+
+  <main>
+    <h1>Welcome to<br>Luna & Lady Landscaping!</h1>
+    <img src="img/luna_logo.jpeg">
+  </main>
+
+  <div id="services">
+    <div class="services-heading">
+    <h2>Services</h2>
+    </div>
+    <div class="big-services-container">
+      <div class="services-container">
+        <h3>Lawn maintenance</h3>
+        <img src="img/grass.jpeg">
+      </div>
+      <div class="services-container">
+        <h3>General landscaping</h3>
+        <img src="img/general_landscaping.png">
+      </div>
+      <div class="services-container">
+        <h3>Lawn makeovers</h3>
+        <img src="img/lawn_makeovers.png">
+      </div>
+      <div class="services-container">
+        <h3>Residential concrete work</h3>
+        <img src="img/concrete.jpg">
+      </div>
+     </div>
+  </div>
+
+  <footer>
+    <h2>Call for an estimate!</h2>
+    <h5><a href="tel:7178133286">(717)813-3286</a></h5>
+    <h5><a href="mailto:LunaAndLadyLandscaping@gmail.com">
+    LunaAndLadyLandscaping@gmail.com</a></h5>
+    <a href="https://www.facebook.com/lunaandladylandscaping"><i class="fab fa-facebook"></i></a>
+  </footer>
+
+
+
+
+
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
