Changed header to fit better. Finished mobile styles and font. Started desktop styles.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Roboto&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
   integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
@@ -28,21 +34,23 @@
  <div class="content-wrapper">
 
   <header>
-    <nav>
-      <a href=#contact>Contact</a>
-      <a href=#services>Services</a>
-    </nav>
     <div class="header-contact">
       <a href="tel:7178133286"><p>(717)813-3286</p></a>
       <a href="mailto:LunaAndLadyLandscaping@gmail.com">
        <p>LunaAndLadyLandscaping@gmail.com</p></a>
       <a><p>Mohnton, Pa</p></a>
     </div>
+    <nav>
+      <a href=#contact>Contact</a>
+      <a href=#services>Services</a>
+    </nav>
   </header>
 
   <main>
     <h1>Welcome to<br>Luna & Lady Landscaping!</h1>
+    <div class="main_img_container">
     <img src="img/luna_logo.jpeg">
+    </div>
   </main>
 
   <div id="services">
@@ -69,16 +77,14 @@
      </div>
   </div>
 
-  <footer>
+  <footer id="contact">
     <h2>Call for an estimate!</h2>
     <h5><a href="tel:7178133286">(717)813-3286</a></h5>
     <h5><a href="mailto:LunaAndLadyLandscaping@gmail.com">
     LunaAndLadyLandscaping@gmail.com</a></h5>
-    <a href="https://www.facebook.com/lunaandladylandscaping"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.facebook.com/lunaandladylandscaping" target="_blank">
+      <i class="fab fa-facebook"></i></a>
   </footer>
-
-
-
 
 
 
