Desktop styles finished

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="services-container">
         <h3>Residential concrete work</h3>
-        <img src="img/concrete.jpg">
+        <img src="img/grass.jpeg">
       </div>
      </div>
   </div>
