--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <header>
     <div class="header-contact">
-      <a href="tel:7178133286"><p>(717)813-3286</p></a>
+      <a href="tel:7178133286"><p>(717) 813-3286</p></a>
       <a href="mailto:LunaAndLadyLandscaping@gmail.com">
        <p>LunaAndLadyLandscaping@gmail.com</p></a>
       <a><p>Mohnton, Pa</p></a>
@@ -49,7 +49,7 @@
   <main>
     <h1>Welcome to<br>Luna & Lady Landscaping!</h1>
     <div class="main_img_container">
-    <img src="img/luna_logo.jpeg">
+    <img src="img/luna_logo.jpeg" alt="Logo">
     </div>
   </main>
 
@@ -60,33 +60,33 @@
     <div class="big-services-container">
       <div class="services-container">
         <h3>Lawn maintenance</h3>
-        <img src="img/grass.jpeg">
+        <img src="img/grass.jpeg" alt="grass image">
       </div>
       <div class="services-container">
         <h3>General landscaping</h3>
-        <img src="img/general_landscaping.png">
+        <img src="img/general_landscaping.png" alt="general image">
       </div>
       <div class="services-container">
         <h3>Lawn makeovers</h3>
-        <img src="img/lawn_makeovers.png">
+        <img src="img/lawn_makeovers.png" alt="lawn makeover image">
       </div>
       <div class="services-container">
-        <h3>Residential concrete work</h3>
-        <img src="img/grass.jpeg">
+        <h3>Residential concrete</h3>
+        <img src="img/grass.jpeg" alt="concrete image">
       </div>
-     </div>
+    </div>
   </div>
 
   <footer id="contact">
     <h2>Call for an estimate!</h2>
-    <h5><a href="tel:7178133286">(717)813-3286</a></h5>
+    <h5><a href="tel:7178133286">(717) 813-3286</a></h5>
     <h5><a href="mailto:LunaAndLadyLandscaping@gmail.com">
     LunaAndLadyLandscaping@gmail.com</a></h5>
     <a href="https://www.facebook.com/lunaandladylandscaping" target="_blank">
       <i class="fab fa-facebook"></i></a>
   </footer>
 
-
+</div>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
